fix contrast

--- a/common/color_definitions.scss
+++ b/common/color_definitions.scss
@@ -1,3 +1,3 @@
 :root {
-  --material-lighter-secondary: lighten($secondary, 10%);
+  --material-lighter-secondary: lighten($secondary, 5%);
 }
